<resources>
    <string name="app_name">PC Presenter</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_error_text">error text</string>
    <string name="button_submit_post">Submit</string>
</resources>